k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
 name: tds-group-3
 labels:
 name: tds-group-3
 course: tds-2026
 type: demo
