k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: tds-group-3
  labels:
    app: api-gateway
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 4000
      targetPort: 4000
      protocol: TCP
